# Knowledge-Engineering

./: .gitignore  README.md  knowledge_graph_proposal.docx  pyproject.toml  run.sh  run_visualization.cmd
config/: crf_experiment.yaml  ontology.yaml
data/fixtures/: esco_skills.csv  gold_ner.jsonl  jd_corpus.jsonl  onet_reference.tsv
data/reports/: graph_report_final.json  knowledge_graph_final_report.md  report_app_examples.json
docs/plans/: 2026-04-20-crf-formal-experiment-design.md  2026-04-20-crf-formal-experiment.md  2026-04-20-first-three-weeks-design.md  2026-04-20-first-three-weeks.md
scripts/: generate_report_pdf.py  neo4j_import.cypher  neo4j_queries.cypher
src/kg_project/: __init__.py  alignment.py  api.py  cli.py  data_sources.py  data_types.py  downstream.py  evaluation.py  final_demo.py  full_input.py  gazetteer.py  graph_pipeline.py  knowledge_fusion.py  labeling.py  llm_extraction.py  preprocess.py  re_experiments.py  relation_extraction.py  relation_models.py  schema.py  storage.py  text.py  visualization.py
src/kg_project/ner/: __init__.py  constants.py  crf_baseline.py  data.py  experiments.py  features.py  neural.py  neural_training.py
tests/: test_cli_smoke.py  test_crf_config.py  test_crf_formal_behavior.py  test_crf_formal_cli.py  test_crf_formal_experiment.py  test_crf_pipeline.py  test_downstream.py  test_evaluation.py  test_graph_pipeline.py  test_labeling.py  test_neural_smoke.py  test_preprocess.py  test_schema.py
